--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -14,9 +14,11 @@
     </div>
 {% endif %}
 <form method="post">
+    <script src="https://hcaptcha.com/1/api.js" async defer></script>
     <input class="form-control form-group" name="email" placeholder="Email Address" type="text" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
-    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <hr>
+    <div class="h-captcha" data-sitekey= {{ site_key }} ></div>
 </form>
 <br>
 <p>If there is an account associated with the email you provided, a link to reset your password has been sent to that link. Be sure to check your spam folder!</p>
