--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,13 @@
     </div>
 {% endif %}
 <form method="post">
+    <script src="https://hcaptcha.com/1/api.js" async defer></script>
     <input autocomplete="off" autofocus class="form-control form-group" name="username" placeholder="Username" type="text" required>
     <input class="form-control form-group" name="password" placeholder="Password" type="password" required>
     <button class="btn btn-primary" type="submit">Log In</button>
     <a href="/forgotpassword" class="btn btn-secondary white">Forgot Password</a>
-    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <hr>
+    <div class="h-captcha" data-sitekey= {{ site_key }} ></div>
     <input type="hidden" name="next" value="{{ request.args.get('next') }}">
 </form>
 {% endblock %}
