--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,6 +65,7 @@
         </footer>
         
         <script src="/assets/js/showdown.min.js"></script>
+        <script src="/assets/js/purify.min.js"></script>
         <script src="/assets/js/convertmd.js"></script>
         <script src="/assets/js/dateconvert.js"></script>
     </body>
