--- a/templates/admin/console.html
+++ b/templates/admin/console.html
@@ -21,7 +21,10 @@
 <br>
 <a class="btn btn-primary" href="/problems/draft" role="button">Draft Problems</a>
 <hr>
-<p>To disable maintenance mode, visit the /admin/maintenance webpage. If you log out during maintenance mode, you can only turn off maintenance mode with a full application reboot.</p>
-<p>The only thing maintenance mode should be used for is to make significant changes to the database that requires nobody writes to it during that time, as well as 5 minutes before a reboot to let users know that the site will be down momentarily. Once rebooted, maintenance mode will turn itself off.</p>
-<a class="btn btn-primary" href="/admin/maintenance" role="button">Enable Maintenance Mode</a>
+<p>The only thing maintenance mode should be used for is to make significant changes to the database that requires nobody writes to it during that time, as well as 5 minutes before a reboot to let users know that the site will be down momentarily. If the application is rebooted, maintenance mode will turn itself off.</p>
+{% if maintenance_mode %}
+    <a class="btn btn-primary" href="/admin/maintenance" role="button">Disable Maintenance Mode</a>
+{% else %}
+    <a class="btn btn-primary" href="/admin/maintenance" role="button">Enable Maintenance Mode</a>
+{% endif %}
 {% endblock %}
