--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/****************** PROBLEM PAGE LAYOUT **********************/
 .flag-submit {
     width: 90%;
     display: inline;
@@ -62,6 +63,10 @@ div.md-preview {
     width: 16px;
 }
 
+table {
+    table-layout: fixed;
+}
+
 /****************** COLOURS **********************************/
 .white {
     color: #ffffff!important;
@@ -77,8 +82,4 @@ div.md-preview {
 
 .svg-green {
     filter: invert(57%) sepia(58%) saturate(3606%) hue-rotate(83deg) brightness(118%) contrast(125%);
-}
-
-table {
-    table-layout: fixed;
 }
