--- a/templates/register.html
+++ b/templates/register.html
@@ -21,6 +21,6 @@
     Your password must be at least 8 characters long. Although they are stored with industry-grade
     encryption and nobody can see them even if they gain access to the users database, we strongly
     recommend you not to use a password you use elsewhere.<br><br>
-    You must provide a valid email account to register on our side. By registering, you acknowledge that you have read our <a href="/privacy">privacy policy</a> and agree to abide by our <a href="/terms">terms of service</a>.
+    You must provide a valid email account to register on our site. By registering, you acknowledge that you have read our <a href="/privacy">privacy policy</a> and agree to abide by our <a href="/terms">terms of service</a>.
 </p>
 {% endblock %}
