--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -36,7 +36,7 @@
                 <br><a href="/admin/submissions?problem_id={{ request.path.split("/")[2] }}">View submissions</a>
                 <br><a href="{{ request.path }}/editeditorial">Create/edit editorial</a>
                 <br><a href="{{ request.path }}/edit">Edit problem</a>
-                <br><a href="#" onlick="deletemsg(this)">Delete problem</a>
+                <br><a href="#" onclick="deletemsg(this)">Delete problem</a>
                 {% if data["draft"] %}
                     <br><a href="{{ request.path }}/publish">Publish draft</a>
                 {% endif %}
@@ -45,13 +45,17 @@
     </div>
 </div>
 <script>
+    function deleteProblem(e) {
+        window.location.href = window.location.pathname + "/delete";
+    }
+
     function deletemsg(e) {
         var msg = `
             <div class="alert alert-danger show" role="alert">
                 Are you sure you want to delete this problem? Click this message to confirm.
             </div>`;
         $("#confirm").html(msg)
-                     .attr("href", window.location.pathname + "/delete");
+                     .attr("onclick", "deleteProblem(this)");
     }
 </script>
 {% endblock %}
