better layout on mobile devices

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
 
-        <main class="container p-5">
+        <main class="container-md">
             {% with msg = get_flashed_messages(with_categories=True) %}
                 {% if msg %}
                     {% for category, message in msg %}
