--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,11 @@ table {
     table-layout: fixed;
 }
 
+main {
+    padding-top: 3rem!important;
+    padding-bottom: 3rem!important;
+}
+
 /****************** COLOURS **********************************/
 .white {
     color: #ffffff!important;
