--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -5,38 +5,40 @@
 {% block main %}
 <h1>Users</h1>
 <div id="confirm" style="cursor: pointer;"></div>
-<table class="table table-hover">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Username</th>
-            <th scope="col">Email</th>
-            <th scope="col">Join Date</th>
-            <th scope="col">Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for row in data %}
-        <tr>
-            <td class="userid">{{ row["id"] }}</td>
-            <td style="{{ "color:red;" if row["banned"] }} {{ "font-weight:bold;" if row["admin"] }}" class="username" >{{ row["username"] }}</td>
-            <td>{{ row["email"] }}</td>
-            <td class="dt">{{ row["join_date"] }}</td>
-            <td>
-                <a href="#" onclick="banmsg(this)">
-                    <img src="/assets/images/restrict.svg" onerror="this.src='/assets/images/restrict.png'" class="svg-red icon" title="Ban/Unban user"></img>
-                </a>
-                <a href="#" onclick="resetpassmsg(this)">
-                    <img src="/assets/images/key.svg" onerror="this.src='/assets/images/key.png'" class="icon" title="Reset password"></img>
-                </a>
-                <a href="#" onclick="adminmsg(this)">
-                    <img src="/assets/images/arrow-up.svg" onerror="this.src='/assets/images/arrow-up.png'" class="svg-green icon" title="Grant/Revoke admin"></img>
-                </a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div style="overflow: auto;">
+    <table class="table table-hover" style="min-width: 400px;">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col" style="width: 10%;">ID</th>
+                <th scope="col" style="width: 20%;">Username</th>
+                <th scope="col" style="width: 25%">Email</th>
+                <th scope="col" style="width: 25%">Join Date</th>
+                <th scope="col" style="width: 20%;">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in data %}
+            <tr>
+                <td class="userid">{{ row["id"] }}</td>
+                <td style="{{ "color:red;" if row["banned"] }} {{ "font-weight:bold;" if row["admin"] }}" class="username" >{{ row["username"] }}</td>
+                <td>{{ row["email"] }}</td>
+                <td class="dt">{{ row["join_date"] }}</td>
+                <td>
+                    <a href="#" onclick="banmsg(this)">
+                        <img src="/assets/images/restrict.svg" onerror="this.src='/assets/images/restrict.png'" class="svg-red icon" title="Ban/Unban user"></img>
+                    </a>
+                    <a href="#" onclick="resetpassmsg(this)">
+                        <img src="/assets/images/key.svg" onerror="this.src='/assets/images/key.png'" class="icon" title="Reset password"></img>
+                    </a>
+                    <a href="#" onclick="adminmsg(this)">
+                        <img src="/assets/images/arrow-up.svg" onerror="this.src='/assets/images/arrow-up.png'" class="svg-green icon" title="Grant/Revoke admin"></img>
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 <script>
     function ban(e) {
         var user_id = e.getAttribute("userid");
