--- a/templates/contest/contest.html
+++ b/templates/contest/contest.html
@@ -21,30 +21,32 @@
     {% endif %}
     <h1 style="display: inline;">{{ title }}</h1>
 </div>
-<table class="table table-hover">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Status</th>
-            <th scope="col">Name</th>
-            <th scope="col">Category</th>
-            <th scope="col">Value</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for row in data %}
-        <tr>
-            <td>
-                {% if row["solved"] %}
-                    <img class="svg-green icon" src="/assets/images/check.svg" onerror="this.src='/assets/images/check.png'"></img>
-                {% else %}
-                    <img class="svg-red icon" src="/assets/images/times.svg" onerror="this.src='/assets/images/times.png'"></img>
-                {% endif %}
-            </td>
-            <td><a href="{{ request.path }}/problem/{{ row["problem_id"] }}">{{ row["name"] }}</a></td>
-            <td>{{ row["category"] }}</td>
-            <td>{{ row["point_value"] }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div style="overflow: auto;">
+    <table class="table table-hover" style="min-width: 400px;">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col" style="width: 15%;">Status</th>
+                <th scope="col" style="width: 50%;">Name</th>
+                <th scope="col" style="width: 20%;">Category</th>
+                <th scope="col" style="width: 15%;">Value</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in data %}
+            <tr>
+                <td>
+                    {% if row["solved"] %}
+                        <img class="svg-green icon" src="/assets/images/check.svg" onerror="this.src='/assets/images/check.png'"></img>
+                    {% else %}
+                        <img class="svg-red icon" src="/assets/images/times.svg" onerror="this.src='/assets/images/times.png'"></img>
+                    {% endif %}
+                </td>
+                <td><a href="{{ request.path }}/problem/{{ row["problem_id"] }}">{{ row["name"] }}</a></td>
+                <td>{{ row["category"] }}</td>
+                <td>{{ row["point_value"] }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
