--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -5,7 +5,7 @@
 {% block main %}
 <h1>{{ data["name"] }}</h1>
 <div id="confirm" style="cursor: pointer;"></div>
-<div class="flex-container">
+<div class="flex">
     <div style="flex: 3; padding: 4px; word-break: break-word;">
         <div id="description" class="showdown">
             <textarea style="display: none;">{{ data["description"] | safe }}</textarea>
