--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -5,8 +5,8 @@
 {% block main %}
 <h1>Users</h1>
 <div id="confirm" style="cursor: pointer;"></div>
-<div style="overflow: auto;">
-    <table class="table table-hover" style="min-width: 400px;">
+<div style="overflow-x: auto;">
+    <table class="table table-hover table-full-width">
         <thead class="thead-dark">
             <tr>
                 <th scope="col" style="width: 10%;">ID</th>
