--- a/templates/problem/draft_problems.html
+++ b/templates/problem/draft_problems.html
@@ -4,13 +4,13 @@
 
 {% block main %}
 <h1>Draft Problems</h1>
-<div style="overflow: auto;">
-    <table class="table table-hover" style="min-width: 400px;">
+<div style="overflow-x: auto;">
+    <table class="table table-hover table-full-width">
         <thead class="thead-dark">
             <tr>
                 <th scope="col" style="width: 65%;">Name</th>
-                <th scope="col" style="width: 20%;">Category</th>
-                <th scope="col" style="width: 15%;">Value</th>
+                <th scope="col" style="width: 22%;">Category</th>
+                <th scope="col" style="width: 13%;">Value</th>
             </tr>
         </thead>
         <tbody>
