--- a/templates/problem/problems.html
+++ b/templates/problem/problems.html
@@ -4,14 +4,14 @@
 
 {% block main %}
 <h1>Problems</h1>
-<div style="overflow: auto;">
-    <table class="table table-hover" style="min-width: 400px;">
+<div style="overflow-x: auto;">
+    <table class="table table-hover table-full-width">
         <thead class="thead-dark">
             <tr>
-                <th scope="col" style="width: 15%;">Status</th>
-                <th scope="col" style="width: 50%;">Name</th>
-                <th scope="col" style="width: 20%;">Category</th>
-                <th scope="col" style="width: 15%;">Value</th>
+                <th scope="col" style="width: 12%;">Status</th>
+                <th scope="col" style="width: 54%;">Name</th>
+                <th scope="col" style="width: 22%;">Category</th>
+                <th scope="col" style="width: 12%;">Value</th>
             </tr>
         </thead>
         <tbody>
