--- a/templates/contest/contest.html
+++ b/templates/contest/contest.html
@@ -16,6 +16,7 @@
                     <a class="dropdown-item" href="/admin/submissions?contest_id={{ request.path[9:] }}">Submissions</a>
                     <a class="dropdown-item" href="{{ request.path }}/addproblem">Add Problem</a>
                     <a class="dropdown-item" href="{{ request.path }}/drafts">View Draft Problems</a>
+                    <a class="dropdown-item" href="{{ request.path }}/notify">Notify Participants</a>
                 {% endif %}
             </div>
         </div>
