--- a/templates/contest/contest.html
+++ b/templates/contest/contest.html
@@ -6,7 +6,7 @@
 <div style="position: relative; margin-bottom: 0.5rem;">
     <h1 style="display: inline;">{{ title }}</h1>
     {% if scoreboard or session.admin %}
-        <div class="dropdown" style="display: inline;">
+        <div class="dropdown" style="display: inline; margin-left: 4px;">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="top: -8px; position: relative;">Actions</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 {% if scoreboard %}
