add see more button (fixes #47)

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,5 +70,6 @@
         <script src="/assets/js/purify.min.js"></script>
         <script src="/assets/js/convertmd.js"></script>
         <script src="/assets/js/dateconvert.js"></script>
+        <script src="/assets/js/seemore.js"></script>
     </body>
 </html>
