--- a/templates/contest/contests.html
+++ b/templates/contest/contests.html
@@ -8,7 +8,10 @@
 	There are no future contests.
 {% endif %}
 {% for contest in future %}
-    <div class="card" style="margin: 16px 0 16px 0;">
+    <div class="card post-card" style="max-height: 600px;">
+        <div class="see-more-wrapper">
+            <a href="#" class="see-more" style="margin-left: 8px;">See More</a>
+        </div>
         <h3>{{ contest["name"] }}</h3>
         <p style="margin-bottom: 0;">Start: <span class="dt">{{ contest["start"] }}</span></p>
         <p style="margin-bottom: 0;">End: <span class="dt">{{ contest["end"] }}</span></p>
@@ -31,7 +34,10 @@
 	There are no ongoing contests.
 {% endif %}
 {% for contest in current %}
-    <div class="card" style="margin: 16px 0 16px 0;">
+    <div class="card post-card" style="max-height: 600px;">
+        <div class="see-more-wrapper">
+            <a href="#" class="see-more" style="margin-left: 8px;">See More</a>
+        </div>
         <h3><a href="/contest/{{ contest["id"] }}">{{ contest["name"] }}</a></h3>
         <p style="margin-bottom: 0;">Start: <span class="dt">{{ contest["start"] }}</span></p>
         <p style="margin-bottom: 0;">End: <span class="dt">{{ contest["end"] }}</span></p>
@@ -54,7 +60,10 @@
 	There are no past contests.
 {% endif %}
 {% for contest in past %}
-    <div class="card" style="margin: 16px 0 16px 0;">
+    <div class="card post-card" style="max-height: 600px;">
+        <div class="see-more-wrapper">
+            <a href="#" class="see-more" style="margin-left: 8px;">See More</a>
+        </div>
         <h3><a href="/contest/{{ contest["id"] }}">{{ contest["name"] }}</a></h3>
         <p style="margin-bottom: 0;">Start: <span class="dt">{{ contest["start"] }}</span></p>
         <p style="margin-bottom: 0;">End: <span class="dt">{{ contest["end"] }}</span></p>
