minor changes for consistency

--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -17,8 +17,8 @@
             <tr>
                 <th scope="col" style="width: 10%;">ID</th>
                 <th scope="col" style="width: 20%;">Username</th>
-                <th scope="col" style="width: 25%">Email</th>
-                <th scope="col" style="width: 25%">Join Date</th>
+                <th scope="col" style="width: 25%;">Email</th>
+                <th scope="col" style="width: 25%;">Join Date</th>
                 <th scope="col" style="width: 20%;">Actions</th>
             </tr>
         </thead>
