Add pagination for announcements & submissions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,10 @@ td {
     word-break: break-word;
 }
 
+.pagination {
+    overflow-x: auto;
+}
+
 /****************** COLOURS **********************************/
 .white {
     color: #ffffff!important;
