--- a/templates/layout.html
+++ b/templates/layout.html
@@ -71,5 +71,7 @@
         <script src="/assets/js/convertmd.js"></script>
         <script src="/assets/js/dateconvert.js"></script>
         <script src="/assets/js/seemore.js"></script>
+        <script src="/assets/js/jquery.twbsPagination.min.js"></script>
+        <script src="/assets/js/pagination.js"></script>
     </body>
 </html>
