--- a/templates/admin/submissions.html
+++ b/templates/admin/submissions.html
@@ -4,6 +4,7 @@
 
 {% block main %}
 <h1>Submissions</h1>
+<div id="pagination"></div>
 <div class="flex">
     <div style="flex: 3; overflow-x: auto;">
         <table class="table table-hover table-full-width">
@@ -76,5 +77,7 @@
     if (queryStrings.get("username") != false) $("form #username").attr("value", queryStrings.get("username"));
     if (queryStrings.get("problem_id") != false) $("form #problem_id").attr("value", queryStrings.get("problem_id"));
     if (queryStrings.get("contest_id") != false) $("form #contest_id").attr("value", queryStrings.get("contest_id"));
+
+    var total_length = {{ length }};
 </script>
 {% endblock %}
