--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -4,7 +4,8 @@
 
 {% block main %}
 <h1>Users</h1>
-<div id="confirm" style="display: none; ">
+<div id="pagination"></div>
+<div id="confirm" style="display: none;">
     <form method="post" style="margin-bottom: 1rem;">
         <input class="btn btn-danger" type="submit">
         <input type="hidden" name="user_id">
@@ -73,5 +74,7 @@
         var msg = `Are you sure you want to grant/revoke admin to ${username}? Click here to confirm.`;
         createForm(msg, "/admin/makeadmin", user_id);
     }
+
+    var total_length = {{ length }}
 </script>
 {% endblock %}
