Fix CAPTCHA issue

--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -8,8 +8,10 @@
     <script src="https://hcaptcha.com/1/api.js" async defer></script>
     <input class="form-control form-group" name="email" placeholder="Email Address" type="text" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
-    <hr>
-    <div class="h-captcha" data-sitekey= {{ site_key }} ></div>
+    {% if USE_CAPTCHA %}
+        <hr>
+        <div class="h-captcha" data-sitekey= {{ site_key }} ></div>
+    {% endif %}
 </form>
 <br>
 <p>If there is an account associated with the email you provided, a link to reset your password has been sent to that link. Be sure to check your spam folder!</p>
