--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
-        <link href="/assets/css/github-markdown.css" rel="stylesheet">
+        <link href="/assets/css/github-markdown.css" rel="stylesheet" media="async" onload="this.media='all'">
         <link href="/assets/css/style.css" rel="stylesheet">
 
         <script src="/assets/js/jquery.min.js"></script>
-        <script src="/assets/js/bootstrap.bundle.min.js"></script>
+        <script defer src="/assets/js/bootstrap.bundle.min.js"></script>
 
         <link href="/static/favicon.png" rel="icon">
 
