--- a/templates/contest/contests.html
+++ b/templates/contest/contests.html
@@ -20,10 +20,10 @@
         </div>
         {% if session["admin"] %}
             <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 36px;">
-                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
+                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" class="icon">
             </a>
             <a href="/admin/deletecontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px;">
-                <img src="/assets/images/trash.svg" onerror="this.src='/assets/images/trash.png'" style="width: 16px;">
+                <img src="/assets/images/trash.svg" onerror="this.src='/assets/images/trash.png'" class="icon">
             </a>
         {% endif %}
     </div>
